--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "@fortawesome/fontawesome-free": "^5.6.3"
   },
   "main": "index.js",
-  "author": "Arun karthi Mani <devloper.makk@gmail.com>",
+  "author": "",
   "license": "MIT"
 }
